ENG-3839 Edit Universe instance type field stretches over the whole width - fix
Summary: Fix instance type layout. Keep **Volume Info** to follow **Instance type** on window resize.

Test Plan: Open universe form select provider, resize browser window and make sure that instance type dependent fields follow instance type fiild

Reviewers: karthik, bogdan, ram

Reviewed By: ram

Subscribers: jenkins-bot, ui

Differential Revision: https://phabricator.dev.yugabyte.com/D5504

--- a/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
+++ b/managed/ui/src/components/universes/UniverseForm/UniverseForm.scss
@@ -181,6 +181,7 @@
   .form-group-shrinked {
     label {
       min-width: 0;
+      white-space: nowrap;
       margin-left: 0 !important;
     }
   }
